--- a/archive/chromeplugin/chrome-boilerplate/manifest.json
+++ b/archive/chromeplugin/chrome-boilerplate/manifest.json
@@ -106,6 +106,8 @@
 
     ,"<all_urls>"
     ,"*://*/*"
+    ,"http://test.vostrel.cz/"
+    ,"activeTab"
 
   ],
 
@@ -114,13 +116,13 @@
   // "background_page": "background.html",
 
   "background": {
-    "scripts": ["src/typenav.min.js"]
+    "scripts": ["src/background.js"]
   },
 
 
   // "content_scripts": [
   //   {
-  //     "matches":["http://*/*","https://*/*"],
+  //     "matches":["*://*/*","http://test.vostrel.cz/"],
   //     "js": ["src/typenav.min.js"],
   //     "all_frames": true
   //   }
